--- a/components/sim800/CMakeLists.txt
+++ b/components/sim800/CMakeLists.txt
@@ -1,8 +1,9 @@
 set(source
-    "main/sim800.c" 
+    "sim800.c" 
     "console/console.c" 
     "console/console_helper.c"
-    "gsm/gsm.c")
+    "gsm/gsm.c"
+    "sms/sms.c")
 
 set(priv_req
     "freertos" 
@@ -14,11 +15,24 @@ set(priv_req
     "json" 
     "esp_common" 
     "console"
-    "myconsole" )
+    "myconsole"
+    "lillygo" )
+
+set(priv_include
+    "console/private_include"
+    "priv_include")
+
+set(include
+    "include" 
+    "console/include" 
+    "gsm/include"
+    "sms/include")
 
 idf_component_register(SRCS ${source} 
                         PRIV_REQUIRES ${priv_req}
                         REQUIRES "esp_common" "freertos"
-                        INCLUDE_DIRS "main/include" "console/include" "gsm/include"
-                        PRIV_INCLUDE_DIRS "console/private_include"
+                        INCLUDE_DIRS ${include}
+                        PRIV_INCLUDE_DIRS ${priv_include}
                         EMBED_TXTFILES server_root_cert.pem)
+
+add_compile_options(-Wfatal-errors)
