--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,5 @@
 idf_component_register(SRCS "main.c"
                     INCLUDE_DIRS ".")
+
+add_compile_options(-Wfatal-errors)
                      
